--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,22 @@
 {
     "name": "pulse-frontend",
     "version": "1.0.0",
-    "main": "App.js",
+    "main": "index.js",
     "scripts": {
-      "start": "expo start",
-      "android": "expo start --android",
-      "ios": "expo start --ios"
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios"
     },
     "dependencies": {
-      "expo": "^51.0.0",
-      "react": "18.2.0",
-      "react-native": "0.74.5",
-      "react-native-gesture-handler": "^2.16.1",
-      "react-native-reanimated": "^3.10.1",
-      "axios": "^1.6.7"
+        "axios": "^1.6.7",
+        "expo": "^52.0.0",
+        "react": "18.3.1",
+        "react-native": "0.76.7"
     },
     "devDependencies": {
-      "@babel/core": "^7.24.0"
+        "@babel/core": "^7.24.0"
+    },
+    "resolutions": {
+        "@types/react": "^18.2.0"
     }
-  }
+}
