--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     },
     "dependencies": {
       "express": "^4.18.2",
-      "cors": "^2.8.5"
+      "cors": "^2.8.5",
+      "axios": "^1.6.7",
+      "node-cache": "^5.1.2"
     }
   }
